--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -2,6 +2,7 @@
 @import "tw-animate-css";
 
 @source "../../../../packages/ui";
+@source "../../../../node_modules/streamdown/dist/index.js";
 
 @custom-variant dark (&:is(.dark *));
 
