--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -2,7 +2,7 @@
 @import "tw-animate-css";
 
 @source "../../../../packages/ui/src/**/*.{ts,tsx}";
-@source "../../../../node_modules/streamdown/dist/index.js";
+@source "../../../../node_modules/streamdown/dist/*.js";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -139,6 +139,15 @@
       transform: rotate(calc(var(--angle) * 1deg + 360deg))
         translateY(calc(var(--radius) * 1px))
         rotate(calc((var(--angle) * -1deg) - 360deg));
+    }
+  }
+
+  @keyframes blink {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
     }
   }
 }
